--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Debug\DebugEngine.cs" />
     <Compile Include="GameEngine.cs" />
     <Compile Include="Inputs\AxisData.cs" />
-    <Compile Include="Controller\ViewModel.cs" />
+    <Compile Include="ViewModel\ViewModel.cs" />
     <Compile Include="Components\Animators\MaterialAnimator.cs" />
     <Compile Include="Components\Animators\MaterialAnimatorKeyframe.cs" />
     <Compile Include="Components\Colliders\BoxCollider.cs" />
@@ -125,6 +125,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>StandardShader.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\IViewModelElement.cs" />
+    <Compile Include="ViewModel\ViewModelCamera.cs" />
+    <Compile Include="ViewModel\ViewModelElement.cs" />
     <Compile Include="View\GameView.cs" />
     <Compile Include="View\MyWindow.cs" />
     <Compile Include="View\OpenTKWrapper.cs" />
